<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.lweynant.yearly.controller.show_event.ShowBirthdayActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/birthday_app_bar_height"
        android:fitsSystemWindows="true"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/AppTheme.PopupOverlay"/>

        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>



    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context="com.lweynant.yearly.controller.show_event.ShowBirthdayActivity"
        tools:showIn="@layout/activity_show_birthday"
        android:background="@color/background">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                      android:layout_width="match_parent"
                      android:layout_height="match_parent"
                      android:orientation="vertical"
            >

            <TextView
                android:paddingLeft="32dp"
                android:paddingTop="16dp"
                android:paddingBottom="8dp"
                android:textAppearance="?android:attr/textAppearanceLarge"

                android:text="@string/label_next_birthday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black_semi_transparent"
                tools:textColor="@color/black_semi_transparent"/>


            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:elevation="2dp"
                android:background="@color/cardview_light_background">
                <include
                    layout="@layout/countdown_layout_view"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </FrameLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="8dp"
                android:paddingLeft="32dp"

                android:paddingTop="16dp"
                android:text="@string/label_birthday"
                android:textAppearance="?android:attr/textAppearanceLarge"

                android:textColor="@color/black_semi_transparent"
                tools:textColor="@color/black_semi_transparent"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/cardview_light_background"

                android:paddingLeft="@dimen/text_margin">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/image_margin"
                    android:src="@drawable/ic_calendar_grey600_24dp"/>

                <TextView
                    android:id="@+id/text_birthday_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/text_margin"
                    android:textColor="@color/secondary_text"
                    android:text="23 February"
                    android:textAppearance="?android:attr/textAppearanceLarge"/>
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/background"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/cardview_light_background"
                android:paddingLeft="@dimen/text_margin">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/image_margin"
                    android:src="@drawable/ic_candle_grey600_24dp"/>

                <TextView
                    android:id="@+id/text_birthday_age"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/text_margin"
                    android:textColor="@color/secondary_text"
                    android:text="@string/question_mark"
                    android:textAppearance="?android:attr/textAppearanceLarge"/>
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/background"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/cardview_light_background"
                android:paddingLeft="@dimen/text_margin">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/image_margin"
                    android:src="@drawable/ic_label_outline_grey600_24dp"/>

                <TextView
                    android:id="@+id/text_birthday_day"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/text_margin"
                    android:textColor="@color/secondary_text"
                    android:text="Wednesday"
                    android:textAppearance="?android:attr/textAppearanceLarge"/>

            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/background"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/text_margin"
                android:background="@color/cardview_light_background">


                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/image_margin"
                    android:src="@drawable/ic_counter_grey600_24dp"/>

                <TextView
                    android:id="@+id/text_birthday_in"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/text_margin"
                    android:textColor="@color/secondary_text"
                    android:text="@string/question_mark"
                    android:textAppearance="?android:attr/textAppearanceLarge"/>
            </LinearLayout>







        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>
    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_edit_birthday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        app:srcCompat="@drawable/ic_mode_edit_white_48dp"
        app:layout_anchor="@id/app_bar"
        app:layout_anchorGravity="bottom|end"/>

</android.support.design.widget.CoordinatorLayout>
