...
    <string name="label_age">Age:</string>
    <string name="label_next_birthday">Next Birthday</string>
    <string name="label_birthday">Birthday</string>
    <string name="at">at</string>
    <string name="menu_share">Share</string>
    <string name="event">Event</string>
    <string name="delete">Delete</string>
    <string name="title_activity_list_birthdays">Birthdays</string>
    <string name="settings_preferences_category_alarm">Alarm</string>
    <string name="settings_preferences_current_alarm">Current alarm</string>
    <string name="action_save">save</string>
    <string name="add_birthday_throw_away">throw away</string>
    <string name="add_birthday_ask_throw_away_modifications">Are you sure you want to throw away the changes?</string>
    <string name="add_birthday_ask_throw_away_modifications_cancel">Keep modifying</string>
    <string name="settings_preferences_app_version">App version</string>
    <string name="settings_preferences_category_about">About</string>
    <string name="countdown_layout_months">MONTHS</string>
...
